# fuzzer

./: .gitignore  README.md  pyproject.toml
src/fuzzer/: core.py
src/fuzzer/http_handlers/: aiohttp_handler.py  http_handler.py  requests_handler.py
tests/: alphabet  test_recursion.py
