[project]
name = "fuzzer"
version = "0.0.1"
authors = [
  { name="Matyas Barocsai"},
]
description = "A simple website fuzzer, created for educational purposes"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"